<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mouad_bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/mouad_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ZONE MOUAD - ZERO-XR7"
            android:textColor="@color/mouad_primary"
            android:textStyle="bold"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nom_label"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nom"
            android:textColor="@color/white"
            android:textColorHint="@color/mouad_accent"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prenom_label"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_prenom"
            android:textColor="@color/white"
            android:textColorHint="@color/mouad_accent"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/bn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/mouad_primary"
            android:textColor="@color/black"
            android:text="@string/valider" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:text="@string/id_label" />

        <EditText
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/white"
            android:textColorHint="@color/mouad_accent"
            android:importantForAutofill="no"
            android:inputType="numberSigned" />

        <Button
            android:id="@+id/load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/mouad_primary"
            android:textColor="@color/black"
            android:text="@string/chercher" />

        <TextView
            android:id="@+id/res"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/mouad_primary"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/mouad_accent"
            android:textColor="@color/white"
            android:text="@string/supprimer" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="REALISE PAR CHARRAJ Mouad aka ZERO-XR7"
            android:textColor="@color/mouad_accent"
            android:gravity="center"
            android:textSize="12sp"
            android:paddingBottom="10dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

<!-- REALISE PAR CHARRAJ Mouad aka ZERO-XR7 -->
